--- a/doppelganger/server_config.env
+++ b/doppelganger/server_config.env
@@ -1,2 +1,9 @@
-SERVER_ADDRESS=''
-MODELS={''}
+SERVER_ADDRESS=192.168.18.196
+MODELS={
+	MODEL_NAME = 'llama3.1:70b',
+	MODEL_NAME = 'gemma2:27b',
+	MODEL_NAME = 'codegemma:7b',
+	MODEL_NAME = 'codegemma:7b-instruct',
+	MODEL_NAME = 'codegemma:7b-code',
+	MODEL_NAME = 'codegemma:2b'
+}
